# xmppc

./: .gitignore  Makefile.am  README.md  build.zig  build.zig.zon  changelog  configure.ac  package.sh  xmppc.doap
deb/DEBIAN/: control  copyright  dirs  md5sums
doc/: Doxyfile  Makefile  xmppc.1  xmppc.1.adoc  xmppc.1.html  xmppc.1.txt
src/: main.c  main.zig  xmpp.h  xmppc.c  xmppc.h
src/mode/: account.c  account.h  bookmark.c  bookmark.h  discovery.c  discovery.h  mam.c  mam.h  message.c  message.h  monitor.c  monitor.h  muc.c  muc.h  omemo.c  omemo.h  openpgp.c  openpgp.h  pgp.c  pgp.h  roster.c  roster.h
